--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "6bdbf6d5-039d-4e4e-a52d-d0c3e5c017d3",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Place ID: ChIJG1GpAm0RUTURm78JbdgFLPg\n"
+      "Place ID: ChIJk1X0gTaNGGARzMHSqvidxRg\n"
      ]
     }
    ],
@@ -18,7 +18,11 @@
     "import requests\n",
     "\n",
     "API_KEY = 'AIzaSyCTGBvebknFJ5LOtbNSYGm7Gr0nTrCxQDI'\n",
-    "search_query = '肉のサトウ商店 福山本店'\n",
+    "store_name = 'ルナ'\n",
+    "address = '東京都渋谷区'\n",
+    "\n",
+    "\n",
+    "search_query = f'{store_name} {address}'\n",
     "\n",
     "url = f\"https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input={search_query}&inputtype=textquery&fields=place_id&key={API_KEY}\"\n",
     "\n",
@@ -74,11 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2256e939-51c8-436c-b2e1-a704a0e2ed78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'candidates': [{'place_id': 'ChIJP0qVJOMQUTURosySsq_e-fs'}], 'status': 'OK'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
   },
   {
    "cell_type": "code",
